--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "initDB.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "nodemon server/app.js",
+    "start": "node app.js",
     "initDB": "node ./src/database/initDB.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,15 +19,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
+    "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
-    "multer": "false",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
+    "nodemon": "^3.0.2",
     "randomstring": "^1.3.0",
     "sharp": "^0.33.0",
     "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "morgan": "^1.10.0",
-    "nodemon": "^3.0.3"
   }
 }
